--- a/package.json
+++ b/package.json
@@ -8,5 +8,7 @@
   "devDependencies": {
     "@playwright/test": "^1.29.1"
   },
-  "scripts": {}
+  "scripts": {
+    "test": "npx playwright test"
+  }
 }
